<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        mapbox:mapbox_cameraTargetLat="41.526342"
        mapbox:mapbox_cameraTargetLng="13.837548"
        mapbox:mapbox_styleUrl="@string/mapbox_style_dark"
        mapbox:mapbox_cameraZoom="2"/>

</RelativeLayout>