...
        android:background="@android:color/white"
        android:onClick="showGoal"
        android:text="Number of Steps: 0 "
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Nav"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:background="@drawable/button2"
                android:onClick="getSpinner"
                android:text="NAVIGATION TO CLOSEST COIN"
                android:textAlignment="center"
                android:textColor="#57bab7"
                android:textSize="12sp" />

            <Button
                android:id="@+id/centremap"
...
