...
        android:id="@+id/forgotbtn"
        android:layout_width="254dp"
        android:layout_height="36dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button1"
        android:fontFamily="sans-serif"
        android:onClick="forgotPassword"
        android:text="Change your password"
        android:textColor="@android:color/background_light" />

    <Button
...

            <TextView
                android:id="@+id/emailval"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="patriciamilou97@gmail.com"
                android:textAlignment="textStart"
                android:textSize="17dp" />
        </TableRow>

        <TableRow>

...
